flux/apps/local/cross-namespace/server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-b
  labels:
    istio.io/dataplane-mode: ambient
