flux/apps/local/cross-namespace/server/policies.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
spec: { }
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-tenant-a
spec:
  action: ALLOW
  rules:
    - from:
      - source:
          serviceAccounts: [ "tenant-a/client" ]
          namespaces: [ "tenant-a" ]
